sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:3: error: not found: value getNombreValeur
  var b= getNombreValeur()/2
         ^AlgShellSort:4: error: not found: value ecart
  while(ecart>0){
        ^